Update deps, implement bot requests

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,12 +1,13 @@
 {% set name = "lstchain" %}
 {% set version = "0.10.13" %}
+{% set python_min = 3.9 %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/lstchain-{{ version }}.tar.gz
+  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/lstchain-{{ version }}.tar.gz
   sha256: 1c9db6d9a5335335699a8cc1dc28b0382b0d797838446dd3738ca5c785f63fa6
 
 build:
@@ -51,16 +52,16 @@ build:
 
 requirements:
   host:
-    - python >=3.9
+    - python {{ python_min }}
     - setuptools >=40.6.0
     - setuptools-scm >=3.4
     - pip
   run:
-    - python >=3.9
+    - python >={{ python_min }}
     - astropy >=5.0,<6.dev0
     - bokeh >=2.0,<3.dev0
     - ctapipe >=0.19.2,<0.20.dev0
-    - ctapipe_io_lst >=0.23.0,<0.24.dev0
+    - ctapipe_io_lst >=0.24.0,<0.25.dev0
     - ctaplot >=0.6.4,<0.7.dev0
     - eventio >=1.9.1,<2.0.0a0
     - gammapy >=1.1,<2.dev0
@@ -87,6 +88,7 @@ test:
   commands:
     - pip check
   requires:
+    - python {{ python_min }}
     - pip
 
 about:
