--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "lstchain" %}
 {% set version = "0.10.15" %}
 
-{% set python_min = 3.10 %}
+{% set python_min = "3.10" %}
 
 package:
   name: {{ name|lower }}
