--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -58,24 +58,24 @@ requirements:
     - pip
   run:
     - python >={{ python_min }}
-    - astropy-base >=5.0,<6.dev0
-    - bokeh >=2.0,<3.dev0
-    - ctapipe >=0.19.2,<0.20.dev0
-    - ctapipe_io_lst >=0.25.1,<0.26.dev0
+    - astropy-base >=6.1,<8.dev0
+    - bokeh >=3.0,<4.dev0
+    - ctapipe >=0.25.1,<0.26.dev0
+    - ctapipe_io_lst >=0.27.0,<0.28.dev0
     - ctaplot >=0.6.4,<0.7.dev0
     - eventio >=1.9.1,<2.0.0a0
-    - gammapy >=1.1,<2.dev0
+    - gammapy >=1.3.0,<1.4.0.dev0
     - h5py
     - iminuit >=2
-    - joblib >=1.2.0,<1.3.dev0
-    - matplotlib-base >=3.7,<3.8.0dev0
+    - joblib >=1.4.0,<1.5.dev0
+    - matplotlib-base >=3.10,<3.11.0dev0
     - numba
     - numpy
     - pandas
-    - pyirf >=0.10.0,<0.11.0dev0
-    - scipy >=1.8,<1.12
+    - pyirf >=0.12.0,<0.13.0dev0
+    - scipy >=1.8
     - seaborn
-    - scikit-learn >=1.2,<2.dev0
+    - scikit-learn >=1.6,<2.dev0
     - pytables
     - toml
     - pymongo
